# qtadam

./: CMakeLists.txt  README.md  qadam.cpp  qadam.h
